NetBSD Problem Report #52681

From www@NetBSD.org  Tue Oct 31 11:46:32 2017
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 223E47A1B9
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 31 Oct 2017 11:46:32 +0000 (UTC)
Message-Id: <20171031114630.AB7EE7A210@mollari.NetBSD.org>
Date: Tue, 31 Oct 2017 11:46:30 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/compat/netbsd32/netbsd32_conv.h: 4 * redundant assignment 
X-Send-Pr-Version: www-1.0

>Number:         52681
>Category:       kern
>Synopsis:       src/sys/compat/netbsd32/netbsd32_conv.h: 4 * redundant assignment
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 31 11:50:00 +0000 2017
>Closed-Date:    Mon Nov 06 11:55:55 +0000 2017
>Last-Modified:  Mon Nov 06 11:55:55 +0000 2017
>Originator:     David Binderman
>Release:        cvs-20171031
>Organization:
>Environment:
>Description:
> [src/sys/compat/netbsd32/netbsd32_conv.h:286]: (warning) Redundant assignment of 'mhp32->msg_control' to itself.
> [src/sys/compat/netbsd32/netbsd32_conv.h:285]: (warning) Redundant assignment of 'mhp32->msg_iovlen' to itself.
> [src/sys/compat/netbsd32/netbsd32_conv.h:284]: (warning) Redundant assignment of 'mhp32->msg_namelen' to itself.
> [src/sys/compat/netbsd32/netbsd32_conv.h:283]: (warning) Redundant assignment of 'mhp32->msg_name' to itself.

Source code is

    mhp32->msg_name = mhp32->msg_name;
    mhp32->msg_namelen = mhp32->msg_namelen;
    mhp32->msg_iovlen = mhp32->msg_iovlen;
    mhp32->msg_control = mhp32->msg_control;

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52681 CVS commit: src/sys/compat/netbsd32
Date: Tue, 31 Oct 2017 12:43:57 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Oct 31 12:43:57 UTC 2017

 Modified Files:
 	src/sys/compat/netbsd32: netbsd32_conv.h

 Log Message:
 PR kern/52681: fix msghdr conversion.


 To generate a diff of this commit:
 cvs rdiff -u -r1.32 -r1.33 src/sys/compat/netbsd32/netbsd32_conv.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Tue, 31 Oct 2017 12:49:18 +0000
Responsible-Changed-Why:
Take


State-Changed-From-To: open->pending-pullups
State-Changed-By: martin@NetBSD.org
State-Changed-When: Tue, 31 Oct 2017 12:49:18 +0000
State-Changed-Why:
[pullup-8 #339]


From: Robert Elz <kre@munnari.OZ.AU>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/52681: src/sys/compat/netbsd32/netbsd32_conv.h: 4 * redundant assignment 
Date: Tue, 31 Oct 2017 20:36:06 +0700

     Date:        Tue, 31 Oct 2017 11:50:00 +0000 (UTC)
     From:        dcb314@hotmail.com
     Message-ID:  <20171031115000.592527A214@mollari.NetBSD.org>


   | > [src/sys/compat/netbsd32/netbsd32_conv.h:286]: (warning) Redundant assignment of 'mhp32->msg_control' to itself.
   | > [src/sys/compat/netbsd32/netbsd32_conv.h:285]: (warning) Redundant assignment of 'mhp32->msg_iovlen' to itself.
   | > [src/sys/compat/netbsd32/netbsd32_conv.h:284]: (warning) Redundant assignment of 'mhp32->msg_namelen' to itself.
   | > [src/sys/compat/netbsd32/netbsd32_conv.h:283]: (warning) Redundant assignment of 'mhp32->msg_name' to itself.
   | 
   | Source code is
   | 
   |     mhp32->msg_name = mhp32->msg_name;
   |     mhp32->msg_namelen = mhp32->msg_namelen;
   |     mhp32->msg_iovlen = mhp32->msg_iovlen;
   |     mhp32->msg_control = mhp32->msg_control;

 This one looks like a cut & paste error in the definition of a macro
 that is (as best I can tell) never used.

 kre

From: "Soren Jacobsen" <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/52681 CVS commit: [netbsd-8] src/sys/compat/netbsd32
Date: Mon, 6 Nov 2017 10:33:06 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Mon Nov  6 10:33:06 UTC 2017

 Modified Files:
 	src/sys/compat/netbsd32 [netbsd-8]: netbsd32_conv.h

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #339):
 	sys/compat/netbsd32/netbsd32_conv.h: revision 1.33
 PR kern/52681: fix msghdr conversion.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.31.8.1 src/sys/compat/netbsd32/netbsd32_conv.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: kre@NetBSD.org
State-Changed-When: Mon, 06 Nov 2017 11:55:55 +0000
State-Changed-Why:
Pullups completed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.