PR kern/52681: fix msghdr conversion.